# xfce4-stopwatch-plugin

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  configure.ac.in  configure.in.in  meson.build  module.xml
icons/: Makefile.am  meson.build
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  meson.build  stopwatch.c  stopwatch.h  stopwatch.vala  stopwatchtimer.c  stopwatchtimer.h  xfce4-stopwatch-plugin.desktop.in  xfce4-stopwatch-plugin.desktop.in.in
po/: LINGUAS  POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hye.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  lt.po  ms.po  nb.po  nl.po  oc.po  pl.po  (+16 more)
